feat: added put/delete rooms endpoint
