# internal/handler/handler.go
@@ -38,9 +38,11 @@ func (h *handler) InitRoutes(app *fiber.App) {
 
 	// room handlers
 	app.Post("/hotel/:id/room", h.isManager, h.roomHandler.AddRoom)
-	app.Get("/hotel/:id/room/all", h.roomHandler.GetHotelRooms)
+	app.Get("/hotel/:id/room/all", h.isManager, h.roomHandler.GetHotelRooms)
 	app.Get("/hotel/:id/room/free", h.roomHandler.GetHotelFreeRooms)
 	app.Get("/room/:id", h.roomHandler.GetRoomById)
+	app.Put("/room/:id", h.isManager, h.roomHandler.UpdateRoom)
+	app.Delete("/room/:id", h.isManager, h.roomHandler.DeleteRoom)
 
 	// swagger handler
 	app.Get("/swagger/*", swagger.HandlerDefault)
